# structhq

api/: .gitignore  Dockerfile  Makefile  manage.py  output.html  output_chunk.html  pyproject.toml  ruff.toml  schema.yml
api/celery/worker/: Dockerfile
api/config/: celery.py  environment.py  loguru.py  openapi.py  settings.py  tests.py  urls.py  wsgi.py
api/scripts/: celerybeat  celeryutil  celeryworker  dbutil  entrypoint  redisutil
api/static/admin/css/: base.css
api/structhq/: apps.py  urls.py
api/structhq/admin/: __init__.py  user_admin.py
api/structhq/lib/: entity_page_number_pagination.py  has_workspace_permission.py  result.py  variable_size_pagination.py
api/structhq/middleware/: __init__.py  health_check_middleware.py  request_log_middleware.py  workspace_middleware.py
api/structhq/migrations/: 0001_initial.py  0002_structrequest_structrequestmessage.py  0003_alter_structrequestmessage_request.py  0004_structrequestmessage_tool_calls_and_more.py  0005_alter_structrequestmessage_content.py  0006_remove_structrequestmessage_request_and_more.py  0007_structrequestchunk_chunk.py  0008_structrequestchunk_results.py  0009_structrequest_results.py
api/structhq/models/: audit.py  base_model.py  chat.py  color.py  profile.py  struct.py  user.py  workflow.py  workspace.py
api/structhq/serializers/: audit_serializers.py  profile_serializers.py  struct_serializers.py  user_serializers.py  workflow_serializers.py  workspace_serializers.py
api/structhq/services/: __init__.py  audit_log_service.py  emit_service.py  partial_message_parser_service.py  scrape_bookface_service.py  struct_service.py
api/structhq/tasks/: __init__.py  advance_struct_request_task.py  advance_workflow_request_task.py  enrich_workflow_request_task.py  send_workflow_hooks_task.py
api/structhq/tests/: test_partial_message_parser_service.py
api/structhq/views/: auth_views.py  profile_views.py  struct_views.py  user_views.py  workflow_views.py  workspace_views.py
api/structhq_api/: apps.py  urls.py
api/structhq_api/lib/: has_api_key_permission.py
(+2644 files in other folders)
